# xxdiff

./: .cvsignore  .gitignore  .hgignore  CHANGES  ChangeLog  PKGINFO  README  README.build  README.rst  TODO  VERSION  index.html  setup.py  style.css
adm/: README  archive  build_rpm  get_version  reconf  release_bin  release_i386_rpm  release_i586_mdk  release_mips_tardist  release_src  rpm_spec  solaris_pkg_instructions  update-website  xxdiff-1.10-1.spec  xxdiff-1.11.spec  xxdiff-1.12.spec  xxdiff-mdk.spec  xxdiff-rpm.fc.spec  xxdiff-rpm.fc5.spec  xxdiff-rpm.spec  xxdiff-sgi.idb  xxdiff-sgi.spec
adm/rpms/: README  release_i386_rpm  xxdiff-rpm.spec
doc/: Makefile  xxdiff-cond-replace.html  xxdiff-cvs-diff.html  xxdiff-doc.html  xxdiff-encrypted.html  xxdiff-find-grep-sed.html  xxdiff-integration.html  xxdiff-integration.txt  xxdiff-match.html  xxdiff-patch-UNFINISHED.html  xxdiff-scripts.html  xxdiff-scripts.txt  xxdiff-secrets.html  xxdiff-secrets.txt  xxdiff-subversion.html  xxdiff-users.txt
doc/screenshots/: allindex.cidx  allindex.html  dirindex.html  sortindex.html  xxdiff-snap-about.desc  xxdiff-snap-about.html  xxdiff-snap-dirs2.desc  xxdiff-snap-dirs2.html  xxdiff-snap-doc.desc  xxdiff-snap-doc.html  xxdiff-snap-files2.desc  xxdiff-snap-files2.html  xxdiff-snap-files3.desc  xxdiff-snap-files3.html  xxdiff-snap-merged.desc  xxdiff-snap-merged.html  xxdiff-snap-opt1.desc  xxdiff-snap-opt1.html  xxdiff-snap-opt2.desc  xxdiff-snap-opt2.html  xxdiff-snap-opt3.desc  xxdiff-snap-opt3.html  xxdiff-snap-opt4.desc  xxdiff-snap-opt4.html  xxdiff-snap-opt5.desc  xxdiff-snap-opt5.html
doc/screenshots/gallery/: Makefile  index.html
etc/: bashrc  docutilsrc  env
etc/elisp/: xxdiff.el
lib/elisp/: xxdiff-style.el  xxdiff.el
lib/python/xxdiff/: backup.py  checkout.py  condrepl.py  editor.py  history.py  invoke.py  mapcompare.py  patches.py  resilient.py  scm.py  selectfiles.py  utils.py  xformloop.py
old/: svn-conversion.dirlist.txt  xcontribs.py
old/alternate-build-systems/: sconstruct  xxdiff.pro.qmake-tentative
old/art/pixmaps-submission/: next_difference.xpm  next_unselected_difference.xpm  previous_difference.xpm  previous_unselected_difference.xpm  return_accept.xpm  return_merged.xpm  save_as.xpm  save_as_left.xpm  save_as_merged.xpm  save_as_middle.xpm  save_as_right.xpm  search.xpm  search_backward.xpm  select_region_left.xpm  select_region_middle.xpm  select_region_neither.xpm  select_region_right.xpm  select_region_unselect.xpm  split_swap_join.xpm
old/autoconf/: INSTALL  Makefile.am  acinclude.m4  automoc  configure.in
old/in-core-diff/: README  diffutils-2.7.patch
old/scripts/: conversion-old-invocations.py
old/tmake2qmake/: log.before  notes-tmake2qmake.txt  xxdiff.t
ports/: README
ports/macosx/: README.macosx  xxdiff-3.2-osx.diff
ports/qt2/: README.qt2
ports/sun-amd64/: Makefile  email.txt
ports/win32/: README.win32
src/: .cvsignore  Makefile.am  Makefile.bootstrap  Makefile.extra  Makefile.missing  accelUtil.cpp  accelUtil.h  app.cpp  app.h  app.inline.h  borderLabel.cpp  borderLabel.h  buffer.cpp  buffer.h  buffer.inline.h  builder.cpp  builder.h  builder.inline.h  builderDirs2.cpp  builderDirs2.h  builderFiles2.cpp  builderFiles2.h  builderFiles3.cpp  builderFiles3.h  builderSingle.cpp  builderSingle.h  builderUnmerge.cpp  builderUnmerge.h  central.cpp  central.h  central.todo  cmdline.cpp  cmdline.h  compiler.h  copyLabel.cpp  copyLabel.h  defs.h  dialogs.cpp  dialogs.h  diffs.cpp  (+74 more)
src/altbuild/: Jamfile  sconstruct  xxdiff.pro.qmake-tentative  xxdiff.pro.windows
src/pixmaps/: diff_files.xpm  diff_files_next.xpm  next_difference.xpm  next_unselected_difference.xpm  previous_difference.xpm  previous_unselected_difference.xpm  return_accept.xpm  return_merged.xpm  return_reject.xpm  save_as.xpm  save_as_left.xpm  save_as_merged.xpm  save_as_middle.xpm  save_as_right.xpm  search.xpm  search_backward.xpm  search_forward.xpm  select_region_left.xpm  select_region_middle.xpm  select_region_neither.xpm  select_region_right.xpm  select_region_unselect.xpm  split_swap_join.xpm  xxdiff-new.jpb  xxdiff.xpm
src/qt2/: markersWidgetBase.cpp  markersWidgetBase.h  moc_app.cpp  optionsDialogBase.cpp  optionsDialogBase.h  searchDialogBase.cpp  searchDialogBase.h
src/qt4/: NOTES.txt  qt4.patch  xxdiff-3.2-osx2.diff  xxdiff-cmdlineRes.diff
src/winfixes/: winfixes.h
test/: hdiff.1  hdiff.2  incomplete  merge  older  out  runtest  testCmdLine
test/bugs/examples/: diff1.txt  diff2.txt
test/bugs/segfault/: ancestor  left  right  stacktrace
test/carriage/: Makefile  d1  d2
test/diff3/: a  aaa  b  c  mine  mine.b  moy.out  older  older.b  yours  yours.b
test/dir1/: file2  file3  file4
test/dir2/: file1  file3  file4  file5
test/dir3/: file1  file2  file3  file4
test/elongate/: f1  f2
test/encrypted/: .cvsignore  conflict.asc  f1.asc  f1.gpg  f2.asc  f2.gpg
test/latin1/: frmine  fryours
test/perhunk/: minews  olderws  yoursws
test/problem/: left  res  res2  right
test/problem.horizontal.1/: file1  file2
test/problem.horizontal.2/: f2  file1  file2
test/split/: st.cpp  st.h  st.pro
test/tabs/: Makefile  notabs  t1  tabs  w1a  w1b  w2a  w2b
test/test-mercurial-merge/: runtest
test/test-render-horiz-insert/: f1  f2
test/unmerge/: basic  contig  diff3merge  emptydiff  falseend0  falseend1  falseend2  falseend3  falseend4  falseend5  falseend6  falseend7  falsestart0  falsestart1  falsestart2  falsestart3  falsestart4  falsestart5  falsestart6  falsestart7
tools/: .htaccess  index.html  index.txt
tools/clearcase/: xx-ct-diff  xxcleartool
tools/cvs/: README  cvs-xdiff  xxcvs  xxcvs.newer  xxcvs.old
tools/emacs/: README  xxdiff-style.el
tools/git/: xx-git-resolve  xxdiff-git
tools/misc/: xxdiff_translate_resources
tools/perforce/: perforce_diff.sh  tkp4
tools/subversion/: README
tools/subversion/contrib/: README  svnxxdiff.sh  svnxxdiff.sh.modifs  xxdiff-sub
tools/tkxxdiff/: README.txt  tkxxdiff
tools/tla/: README
web/: docutils-style.css  download  index.html  index.txt  project.css
(+31 files in other folders)
